# GarminToStrava

./: .env.example  .gitignore  LICENSE.txt  Makefile  README.md  auth_strava.py  garmin2strava.py  pyproject.toml
.cursor/rules/: uv.mdc
garmin2strava/: __main__.py  auth_strava.py  cli.py  garmin2strava.py
web-ui/: README.md  index.html  tcx-visualizer.js
