[project]
name = "garmintostrava"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "garminconnect",
    "python-dotenv",
    "requests",
    "stravalib",
    "webbrowser-open>=0.3.0",
    "flask",
    "questionary",
]

[project.scripts]
garmin2strava = "garmin2strava:cli"
g2s = "garmin2strava:cli"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["garmin2strava"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

